--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   cupertino_icons: ^1.0.8
   get: ^4.7.3
   http: ^1.6.0
+  get_storage: ^2.1.1
+  geolocator: ^14.0.2
+  connectivity_plus: ^7.0.0
 
 dev_dependencies:
   flutter_test:
