--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   get_storage: ^2.1.1
   geolocator: ^14.0.2
   connectivity_plus: ^7.0.0
+  flutter_map: ^8.2.2
 
 dev_dependencies:
   flutter_test:
